<resources>
    <string name="app_name">Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TravelEase</string>
    <string name="nav_header_subtitle">Your Travel Companion</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_followers">Followers</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>

    <string name="tripPlan">Trip Plan</string>
    <string name="travelogue">Travelogue (Future)</string>

    <!--Auth-->
    <string name="email_address">E-mail address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_register">New User? Register</string>
    <string name="existing_user_sign_in">Existing User? Sign In</string>
    <string name="register">Register</string>
    <string name="sign_up_free">Sign Up Free</string>
    <string name="logout">Logout</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name">Display Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location_name">Location Name</string>
    <string name="close_button">Close Button</string>
    <string name="plan_a_new_trip">Plan a new trip</string>
    <string name="where_to">Where To?</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_planning">Start planning</string>
    <string name="banner_image">Banner Image</string>
    <string name="plan_your_next_adventure">Plan your next Adventure</string>
    <string name="create_your_plan">Create Your Plan</string>
    <string name="top_locations">Top Locations</string>
    <string name="tourism_spots_near_you">Tourism Spots near you</string>
    <string name="featured_guides_from_users">Featured Guides from users</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="trip_delete">Delete</string>
</resources>