<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.project.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.project.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.project.auth.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/signUpActivity"
        android:name="com.example.project.auth.SignUpActivity"
        android:label="activity_sign_up"
        tools:layout="@layout/activity_sign_up" />
    <fragment
        android:id="@+id/nav_location"
        android:name="com.example.project.ui.location.LocationFragment"
        android:label="Location"
        tools:layout="@layout/fragment_location">
        <argument
            android:name="locationId"
            app:argType="integer"/>
    </fragment>
    <fragment
        android:id="@+id/nav_trip"
        android:name="com.example.project.ui.trip.TripFragment"
        android:label="Plan your Trip"
        tools:layout="@layout/fragment_trip" >
        <argument
            android:name="tripId"
            app:argType="com.example.project.models.Trip" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.project.ui.profile.ProfileFragment"
        android:label="Profile" />
    <dialog
        android:id="@+id/addTripFragment"
        android:name="com.example.project.helpers.add_trip.AddTripFragment"
        android:label="fragment_add_trip"
        tools:layout="@layout/fragment_add_trip" />
</navigation>